added text on intial index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   Bro? Bro!
-  <a href="site1/index.html">Start Exercise</a>
+  <a href="site1/index.html">Start Exercise</a><br>
+  Apparently Matt Fraction has changed his name on twitter to 'butt stuff reindeer' how odd. 
 </body>
 </html>
